--- a/JS/websitebuilding.html
+++ b/JS/websitebuilding.html
@@ -7,10 +7,13 @@
     <title>AQUA BEACH FARMHOUSE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+
+    <div class="website">
+    
     <h1 class="text-center">AQUA BEACH FARMHOUSE</h1>
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -47,11 +50,11 @@
 
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">☎️8329245219</a>
+                        <a class="nav-link" href="#">☎️8329245219`</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">BOOKED</a>
+                        <a class="nav-link" href="#">🛒</a>
                     </li>
 
 
@@ -101,16 +104,49 @@
         </div>
 
         <div class="form-group">
-            <label>ROOM CATEGORY</label>
+    <label for="room">ROOM CATEGORY</label>  <br>    
+    <select name="room" id="room">
+        <option value="groundfloor">GROUND FLOOR</option>
+        <option value="firstfloor">FIRST FLOOR</option>
+    </select>
+</div><br>
 
-        </div>
+<div class="name">
+    <label for="fn">NAME</label><br>
+    <input type="text" id="fn" name="fn"> <br>
+</div><br>
+
+<div>
+        <a href="https://wa.me/+919373431902
+            " class="book btn ">BOOK VIA WHATSAPP</a>
+
+</div>
+
+<div class="content">
+    <h3>WHY CHOOSE US </h3>
+    <h5>Discover the Unmatched Comfort of Staying with Us </h5>
+    <P>Escape to tranquility at our enchanting farmhouse near Kalamb Beach! Nestled amidst lush greenery, this serene retreat offers the perfect blend of comfort and nature. Just steps away from the golden sands and soothing waves, it’s an ideal getaway for relaxation, family gatherings, or a romantic retreat. Experience peace, beauty, and rejuvenation in every moment.</P>
+</div>
+
+
+
+</div>
+
+
+
+
+
+
+
+
 
 </body>
 
 </html>
-
 <style>
-    .body{
-        background-image: ;
+    body
+    {
+        background:url(./images/beachimage.jfif);
+        
     }
 </style>
