--- a/JS/websitebuilding.html
+++ b/JS/websitebuilding.html
@@ -92,7 +92,7 @@
 
             <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="form-group">
-                    <label>Children</label>
+                    <label>Children (Below 10)</label>
                     <div class="qty-buttons">
                         <input type="button" value="+" class="qtyminus" name="children">
                         <input type="text" name="children" id="children" value="" class="qty form-control"
@@ -113,7 +113,7 @@
 
 <div class="name">
     <label for="fn">NAME</label><br>
-    <input type="text" id="fn" name="fn"> <br>
+    <input type="text" id="fn" name="fn" placeholder="First name and Last Name"> <br>
 </div><br>
 
 <div>
@@ -128,9 +128,22 @@
     <P>Escape to tranquility at our enchanting farmhouse near Kalamb Beach! Nestled amidst lush greenery, this serene retreat offers the perfect blend of comfort and nature. Just steps away from the golden sands and soothing waves, it’s an ideal getaway for relaxation, family gatherings, or a romantic retreat. Experience peace, beauty, and rejuvenation in every moment.</P>
 </div>
 
-
-
+<div class="inside">
+    <h4> SERENE SEA-FACING ROOMS</h4>
+    <p>Experience unparalleled luxury in rooms with expansive sea-facing windows, flooding the space with natural light. Complemented by elegant attached bathrooms, they redefine comfort and relaxation with a stunning sea view.</p>
+  
+  <h4>RELAX IN A BEAUTIFUL VIEW</h4>
+  <P>Relaxing at Aqua Beach Farmhouse offers a perfect getaway, where you and your loved ones can enjoy breathtaking sea views, refreshing ocean breezes, and quality time together amidst nature's tranquility and beauty.</P>
+  
+  
+  
+  
+  
+  
 </div>
+</div>
+
+
 
 
 
@@ -148,5 +161,10 @@
     {
         background:url(./images/beachimage.jfif);
         
+    }
+
+    .row
+    {
+        grid-row: 50px;
     }
 </style>
